--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8"/>
     <meta name='viewport' content='width=device-width'/>
-    <title>Terra</title>
+    <title>ImperiaNova</title>
   </head>
   <body>
     <div id="root"></div>
